@@ -1428,6 +1428,18 @@ blockquote{
   box-sizing:border-box; }
 .margin-zero{
   margin:0; }
+
+.mt-auto{
+  margin-top:auto; }
+
+.mr-auto{
+  margin-right:auto; }
+
+.mb-auto{
+  margin-bottom:auto; }
+
+.ml-auto{
+  margin-left:auto; }
 .pull-left{
   float:left !important; }
 
@@ -1461,17 +1473,6 @@ blockquote{
 
 .align-baseline{
   vertical-align:baseline; }
-
-.align-self-center{
-  -webkit-align-self:center;
-  -ms-flex-item-align:center;
-  align-self:center; }
-
-.justify-content-center{
-  -webkit-box-pack:center;
-  -webkit-justify-content:center;
-  -ms-flex-pack:center;
-  justify-content:center; }
 .fixed{
   position:fixed; }
 
@@ -1502,8 +1503,17 @@ blockquote{
 @media (min-width: 768px){
   .lead{
     font-size:120%; } }
+.d-block{
+  display:block; }
+
 .d-hidden{
   display:none !important; }
+
+.d-flex{
+  display:-webkit-box;
+  display:-webkit-flex;
+  display:-ms-flexbox;
+  display:flex; }
 
 .d-inline{
   display:inline; }
@@ -1511,14 +1521,11 @@ blockquote{
 .d-inline-block{
   display:inline-block; }
 
-.d-block{
-  display:block; }
-
-.d-flex{
-  display:-webkit-box;
-  display:-webkit-flex;
-  display:-ms-flexbox;
-  display:flex; }
+.d-inline-flex{
+  display:-webkit-inline-box;
+  display:-webkit-inline-flex;
+  display:-ms-inline-flexbox;
+  display:inline-flex; }
 
 .d-table{
   display:table; }
@@ -1538,6 +1545,132 @@ blockquote{
 
 .pointer{
   cursor:pointer; }
+.flex-row{
+  -webkit-box-orient:horizontal;
+  -webkit-box-direction:normal;
+  -webkit-flex-direction:row;
+  -ms-flex-direction:row;
+  flex-direction:row; }
+
+.flex-column{
+  -webkit-box-orient:vertical;
+  -webkit-box-direction:normal;
+  -webkit-flex-direction:column;
+  -ms-flex-direction:column;
+  flex-direction:column; }
+
+.flex-row-reverse{
+  -webkit-box-orient:horizontal;
+  -webkit-box-direction:reverse;
+  -webkit-flex-direction:row-reverse;
+  -ms-flex-direction:row-reverse;
+  flex-direction:row-reverse; }
+
+.flex-column-reverse{
+  -webkit-box-orient:vertical;
+  -webkit-box-direction:reverse;
+  -webkit-flex-direction:column-reverse;
+  -ms-flex-direction:column-reverse;
+  flex-direction:column-reverse; }
+
+.justify-content-start{
+  -webkit-box-pack:start;
+  -webkit-justify-content:flex-start;
+  -ms-flex-pack:start;
+  justify-content:flex-start; }
+
+.justify-content-end{
+  -webkit-box-pack:end;
+  -webkit-justify-content:flex-end;
+  -ms-flex-pack:end;
+  justify-content:flex-end; }
+
+.justify-content-center{
+  -webkit-box-pack:center;
+  -webkit-justify-content:center;
+  -ms-flex-pack:center;
+  justify-content:center; }
+
+.justify-content-between{
+  -webkit-box-pack:justify;
+  -webkit-justify-content:space-between;
+  -ms-flex-pack:justify;
+  justify-content:space-between; }
+
+.justify-content-around{
+  -webkit-justify-content:space-around;
+  -ms-flex-pack:distribute;
+  justify-content:space-around; }
+
+.align-items-start{
+  -webkit-box-align:start;
+  -webkit-align-items:flex-start;
+  -ms-flex-align:start;
+  align-items:flex-start; }
+
+.align-items-end{
+  -webkit-box-align:end;
+  -webkit-align-items:flex-end;
+  -ms-flex-align:end;
+  align-items:flex-end; }
+
+.align-items-center{
+  -webkit-box-align:center;
+  -webkit-align-items:center;
+  -ms-flex-align:center;
+  align-items:center; }
+
+.align-items-baseline{
+  -webkit-box-align:baseline;
+  -webkit-align-items:baseline;
+  -ms-flex-align:baseline;
+  align-items:baseline; }
+
+.align-items-stretch{
+  -webkit-box-align:stretch;
+  -webkit-align-items:stretch;
+  -ms-flex-align:stretch;
+  align-items:stretch; }
+
+.flex-nowrap{
+  -webkit-flex-wrap:nowrap;
+  -ms-flex-wrap:nowrap;
+  flex-wrap:nowrap; }
+
+.flex-wrap{
+  -webkit-flex-wrap:wrap;
+  -ms-flex-wrap:wrap;
+  flex-wrap:wrap; }
+
+.flex-wrap-reverse{
+  -webkit-flex-wrap:wrap-reverse;
+  -ms-flex-wrap:wrap-reverse;
+  flex-wrap:wrap-reverse; }
+
+.align-self-start{
+  -webkit-align-self:flex-start;
+  -ms-flex-item-align:start;
+  align-self:flex-start; }
+
+.align-self-end{
+  -webkit-align-self:flex-end;
+  -ms-flex-item-align:end;
+  align-self:flex-end; }
+
+.align-self-center{
+  -webkit-align-self:center;
+  -ms-flex-item-align:center;
+  align-self:center; }
+
+.align-self-baseline{
+  -webkit-align-self:baseline;
+  -ms-flex-item-align:baseline;
+  align-self:baseline; }
+
+.align-self-stretch{
+  -webkit-align-self:stretch;
+  -ms-flex-item-align:stretch;
+  align-self:stretch; }
 
 .hidden-xs-up{
   display:none !important; }
